@@ -68,12 +68,12 @@ public class ReviewDbRepository extends BaseRepository<Review> implements Review
     @Override
     public List<Review> findAll(int count) {
         String sql = """
-                    SELECT r.*, COALESCE(SUM(ru.rating), 0) AS useful
-                    FROM review r
-                    LEFT JOIN review_users ru ON r.review_id = ru.review_id
-                    GROUP BY r.review_id
-                    ORDER BY useful DESC
-                    LIMIT ?
+                SELECT r.*, COALESCE(SUM(ru.is_useful), 0) AS useful
+                FROM review r
+                LEFT JOIN review_users ru ON r.review_id = ru.review_id
+                GROUP BY r.review_id
+                ORDER BY useful DESC
+                LIMIT ?
                 """;
         return jdbc.query(sql, mapper, count);
     }
@@ -107,7 +107,7 @@ public class ReviewDbRepository extends BaseRepository<Review> implements Review
         String sql = "SELECT is_useful FROM review_users WHERE review_id = ? AND user_id = ?";
         List<Boolean> result = jdbc.query(sql,
                 (rs, rowNum) -> rs.getBoolean("is_useful"), reviewId, userId);
-        return result.isEmpty() ? null : result.get(0);
+        return result.isEmpty() ? null : result.getFirst();
     }
 
     private void incrementUseful(Long reviewId) {
